# RepoSeal

./: .gitignore  .reposealignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package.json  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  false-positive.yml  rule-proposal.yml
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: README.md
benchmarks/dependency-steering/: cases.json
benchmarks/hallucinated-repositories/: cases.json
benchmarks/malicious-skills/: cases.json
crates/reposeal-cli/: Cargo.toml
crates/reposeal-cli/src/: main.rs
crates/reposeal-cli/tests/: cli_contract.rs
crates/reposeal-core/: Cargo.toml
crates/reposeal-core/src/: lib.rs
crates/reposeal-lockfile/: Cargo.toml
crates/reposeal-lockfile/src/: lib.rs
crates/reposeal-policy/: Cargo.toml
crates/reposeal-policy/src/: lib.rs
crates/reposeal-provenance/: Cargo.toml
crates/reposeal-provenance/src/: lib.rs
crates/reposeal-resolver/: Cargo.toml
crates/reposeal-resolver/src/: lib.rs
crates/reposeal-sandbox/: Cargo.toml
crates/reposeal-sandbox/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  PRD.md  RELEASE_V1.md  SPECIFICATION.md  TECHNICAL_DESIGN.md  TECHNICAL_REQUIREMENTS.md  TEST_STRATEGY.md  THREAT_MODEL.md  TRACEABILITY.md  USER_GUIDE.md
docs/adr/: 0001-local-command-firewall.md  0002-evidence-before-score.md  0003-deterministic-lockfile.md  0004-sandbox-claims.md  0005-hermetic-public-benchmark.md  README.md
examples/: reposeal.manifest.json  reposeal.policy.yaml
integrations/claude-code/: reposeal_hook.py  settings.example.json
integrations/codex/: README.md
integrations/cursor/: README.md
integrations/gemini-cli/: README.md
integrations/mcp/: config.example.json
rules/hallusquatting/: defaults.yaml
rules/install-scripts/: defaults.yaml
rules/repositories/: defaults.yaml
rules/skills/: defaults.yaml
scripts/: check_repo.py
spec/: agent-lock.schema.json  capability-manifest.schema.json  identity-attestation.md  verification-report.schema.json
