[workspace]
resolver = "2"
members = [
  "crates/reposeal-cli",
  "crates/reposeal-core",
  "crates/reposeal-lockfile",
  "crates/reposeal-policy",
  "crates/reposeal-provenance",
  "crates/reposeal-resolver",
  "crates/reposeal-sandbox",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.97"
authors = ["Carter LaSalle"]
license = "Apache-2.0"
repository = "https://github.com/carterlasalle/RepoSeal"
homepage = "https://github.com/carterlasalle/RepoSeal"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
strsim = "0.11"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
doc_markdown = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
overflow-checks = true
panic = "abort"

[profile.dev]
overflow-checks = true

