[package]
name = "reposeal-provenance"
description = "Capability manifests and identity provenance for RepoSeal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reposeal-core = { version = "1.0.0", path = "../reposeal-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true

