[package]
name = "reposeal-resolver"
description = "Canonical source resolution and HalluSquatting detection for RepoSeal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
reposeal-core = { version = "1.0.0", path = "../reposeal-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true

